fix: comment out dark mode system palette import and add ion-radio styles

--- a/src/global.scss
+++ b/src/global.scss
@@ -34,7 +34,7 @@
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import "@ionic/angular/css/palettes/dark.system.css";
+/* @import "@ionic/angular/css/palettes/dark.system.css"; */
 
 html {
   font-family: sans-serif;
@@ -63,6 +63,18 @@ ion-title {
 
 ion-menu-button {
   color: #17603a;
+}
+
+ion-radio {
+  --border-radius: 4px;
+  --inner-border-radius: 4px;
+
+  --color: #ddd;
+  --color-checked: #17603A;
+}
+
+ion-radio::part(container) {
+  border-color: #17603A;
 }
 
 #btnReset {
